# pinControl_propeller

./: CMakeLists.txt  testPins.cpp
pinClasses/: pin.h  pinGroup.h
